--- a/adm/pom.xml
+++ b/adm/pom.xml
@@ -4,7 +4,7 @@
 	  <parent>
 	    <artifactId>parent</artifactId>
 	    <groupId>org.nasdanika.togaf</groupId>
-	    <version>9.2.2022-12-00</version>
+	    <version>9.2.2022-1-0</version>
 	    <relativePath>..</relativePath>
 	  </parent>
 	<artifactId>adm</artifactId>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.nasdanika.html</groupId>
 			<artifactId>flow</artifactId>
-			<version>2021.12.2</version>
+			<version>2022.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -32,6 +32,11 @@
 			<version>3.20.2</version>
 			<scope>test</scope>
 		</dependency>				
+		<dependency>
+		  <groupId>com.github.dfabulich</groupId>
+		  <artifactId>sitemapgen4j</artifactId>
+		  <version>1.1.2</version>
+		</dependency>		
 	</dependencies>
 </project>
 
