--- a/adm/model/page-template.yml
+++ b/adm/model/page-template.yml
@@ -18,7 +18,7 @@ bootstrap-page:
     - https://cdn.jsdelivr.net/npm/bootstrap-vue@2.21.2/dist/bootstrap-vue.min.js
     - https://cdn.jsdelivr.net/gh/Nasdanika/html@master/model/app.gen/web-resources/js/components/table.js
   body:
-    - content-resource: fork-me-on-github.html
+#    - content-resource: fork-me-on-github.html
     - app-page:
         fluid: true
         navigation-panel:
