--- a/adm/pom.xml
+++ b/adm/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.nasdanika.html</groupId>
 			<artifactId>flow</artifactId>
-			<version>2022.4.1</version>
+			<version>${html.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
