--- a/adm/pom.xml
+++ b/adm/pom.xml
@@ -12,6 +12,20 @@
 	<name>Nasdanika Flow model of TOGAF ADM</name>
 	<description>Architecture Development Method flow model definting activities (phases and steps), roles, deliverables and resorces.</description>
 	<build>
+		<plugins>
+		        <plugin>
+		            <groupId>org.apache.maven.plugins</groupId>
+	        	    <artifactId>maven-surefire-plugin</artifactId>
+		            <version>3.0.0-M7</version>
+		            <dependencies>
+	        	        <dependency>
+	                	    <groupId>org.junit.jupiter</groupId>
+		                    <artifactId>junit-jupiter-engine</artifactId>
+		                    <version>5.9.1</version>
+	        	        </dependency>
+		            </dependencies>
+		        </plugin>
+		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
@@ -21,11 +35,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
-		</dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>5.9.1</version>
+		    <scope>test</scope>
+		</dependency>		
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
